@@ -36,7 +36,6 @@
 #import "iTunesTrack.h"
 #import "iTunesFSFormatter.h"
 #import "NSObject+FUSEOFS.h"
-#import "NSString+FUSEOFS.h"
 #import "FUSEOFSMemoryContainer.h"
 #import "iTunesFormatFile.h"
 
