@@ -1,5 +1,10 @@
 2011-01-26  Marcus Mueller  <znek@mulle-kybernetik.com>
 
+	* GNUmakefile: first changes for gnustep-make 2.4.0 compat
+
+	* iTunesFSFormatter.m, iTunesPlaylist.m, iTunesTrack.m, iPodLibrary.m,
+	  iTunesLibrary.m: fixed imports
+
 	* removed outdated FUSEObjC-GNUstep subproject
 
 	* FUSEOFS is an svn:external now
